--- a/package.json
+++ b/package.json
@@ -2,5 +2,13 @@
   "name": "gatsby-blog",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "scripts": {
+    "dev": "gatsby develop -p 9988 -o"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "gatsby": "^3.11.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
