--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
     "@mdx-js/react": "^1.6.22",
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.11.1",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-image": "^1.11.0",
     "gatsby-plugin-mdx": "^2.11.0",
+    "gatsby-plugin-sharp": "^3.11.0",
     "gatsby-plugin-styled-components": "^4.11.0",
+    "gatsby-remark-images": "^5.8.0",
     "gatsby-source-filesystem": "^3.11.0",
+    "gatsby-transformer-sharp": "^3.11.0",
+    "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-live": "^2.3.0",
     "styled-components": "^5.3.0"
   }
 }
